--- a/aws-rds-dbproxytargetgroup/pom.xml
+++ b/aws-rds-dbproxytargetgroup/pom.xml
@@ -21,7 +21,7 @@
     <repositories>
         <repository>
             <id>central</id>
-            <url>http://central.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2/</url>
         </repository>
     </repositories>
 
@@ -68,10 +68,11 @@
             <version>2.26.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-rds -->
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-rds</artifactId>
-            <version>1.11.699</version>
+            <version>1.11.795</version>
         </dependency>
     </dependencies>
 
