Upgrade CFN version to 2.0

--- a/aws-rds-dbproxy/.rpdk-config
+++ b/aws-rds-dbproxy/.rpdk-config
@@ -10,6 +10,7 @@
             "amazon",
             "rds",
             "dbproxy"
-        ]
+        ],
+        "protocolVersion": "2.0.0"
     }
 }
