Add VPC Id property to proxy for proxy API update in aws-java-sdk-rds 1.11.971
adding "additionalProperties": false to proxy and targetGroup

--- a/aws-rds-dbproxy/pom.xml
+++ b/aws-rds-dbproxy/pom.xml
@@ -71,7 +71,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-rds</artifactId>
-            <version>1.11.699</version>
+            <version>[1.11.971, 2.0.0)</version>
         </dependency>
     </dependencies>
 
