--- a/aws-rds-dbproxy/.rpdk-config
+++ b/aws-rds-dbproxy/.rpdk-config
@@ -1,4 +1,5 @@
 {
+    "artifact_type": "RESOURCE",
     "typeName": "AWS::RDS::DBProxy",
     "language": "java",
     "runtime": "java8",
@@ -12,5 +13,6 @@
             "dbproxy"
         ],
         "protocolVersion": "2.0.0"
-    }
+    },
+    "executableEntrypoint": "software.amazon.rds.dbproxy.HandlerWrapperExecutable"
 }
