--- a/aws-rds-dbproxytargetgroup/.rpdk-config
+++ b/aws-rds-dbproxytargetgroup/.rpdk-config
@@ -1,4 +1,5 @@
 {
+    "artifact_type": "RESOURCE",
     "typeName": "AWS::RDS::DBProxyTargetGroup",
     "language": "java",
     "runtime": "java8",
@@ -12,5 +13,6 @@
             "dbproxytargetgroup"
         ],
         "protocolVersion": "2.0.0"
-    }
+    },
+    "executableEntrypoint": "software.amazon.rds.dbproxytargetgroup.HandlerWrapperExecutable"
 }
