--- a/aws-rds-dbproxyendpoint/pom.xml
+++ b/aws-rds-dbproxyendpoint/pom.xml
@@ -61,6 +61,12 @@
             <version>2.26.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-rds</artifactId>
+            <version>[1.11.971, 2.0.0)</version>
+        </dependency>
     </dependencies>
 
     <build>
