--- a/aws-rds-dbproxytargetgroup/template.yml
+++ b/aws-rds-dbproxytargetgroup/template.yml
@@ -4,7 +4,8 @@ Description: AWS SAM template for the AWS::RDS::DBProxyTargetGroup resource type
 
 Globals:
   Function:
-    Timeout: 60  # docker start-up times can be long for SAM CLI
+    Timeout: 1000  # docker start-up times can be long for SAM CLI
+    MemorySize: 512
 
 Resources:
   TypeFunction:
@@ -12,11 +13,11 @@ Resources:
     Properties:
       Handler: software.amazon.rds.dbproxytargetgroup.HandlerWrapper::handleRequest
       Runtime: java8
-      CodeUri: ./target/aws-rds-dbproxytargetgroup-handler-1.0-SNAPSHOT.jar
+      CodeUri: ./target/aws-rds-dbproxytargetgroup-1.0.jar
 
   TestEntrypoint:
     Type: AWS::Serverless::Function
     Properties:
       Handler: software.amazon.rds.dbproxytargetgroup.HandlerWrapper::testEntrypoint
       Runtime: java8
-      CodeUri: ./target/aws-rds-dbproxytargetgroup-handler-1.0-SNAPSHOT.jar
+      CodeUri: ./target/aws-rds-dbproxytargetgroup-1.0.jar
