--- a/aws-rds-dbproxytargetgroup/pom.xml
+++ b/aws-rds-dbproxytargetgroup/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.4</version>
+            <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
 
@@ -72,7 +72,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-rds</artifactId>
-            <version>1.11.795</version>
+            <version>[1.12.364, 2.0.0)</version>
         </dependency>
     </dependencies>
 
